Combine behaviours and lifestyle into one textarea
Additional behaviours and lifestyle choices
becomes one textarea because they are considered
together per offence/ sentence option / etc

--- a/app/views/16/pre-sentence-report/additional-behaviours-and-lifestyle-considerations.html
+++ b/app/views/16/pre-sentence-report/additional-behaviours-and-lifestyle-considerations.html
@@ -58,31 +58,18 @@
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
         <form action="additional-behaviours-and-lifestyle-considerations" method="post" novalidate>
-          <span class="govuk-caption-xl">
-            Dylan Adam Armstrong CRN: E234516
-          </span>
-          <h1 class="govuk-heading-xl">
-            Additional behaviours and lifestyle considerations
-          </h1>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="additional-behaviours">
-              Additional behaviours
-            </h2>
-            <div id="additional-behaviours-hint" class="govuk-hint">
-              Describe any additional behaviours that could have in impact
-              on the proposed sentence.
+            <span class="govuk-caption-xl">
+              Dylan Adam Armstrong CRN: E234516
+            </span>
+            <h1 class="govuk-heading-xl" for="additional-behaviours-and-lifestyle-considerations">
+              Additional behaviours and lifestyle considerations
+            </h1>
+            <div id="additional-behaviours-and-lifestyle-considerations-hint" class="govuk-hint">
+              Describe any additional behaviours and lifestyle considerations
+              that could have in impact on the proposed sentence.
             </div>
-            <textarea class="govuk-textarea" id="additional-behaviours" name="additional-behaviours" rows="8" aria-describedby="additional-behaviours-hint">{{data['additional-behaviours']}}</textarea>
-          </div>
-          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-          <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="lifestyle-considerations">
-              Lifestyle considerations
-            </h2>
-            <div id="lifestyle-considerations-hint" class="govuk-hint">
-              Describe any lifestyle considerations that could have an
-              impact on the proposed sentence</div>
-            <textarea class="govuk-textarea" id="lifestyle-considerations" name="lifestyle-considerations" rows="8" aria-describedby="lifestyle-considerations-hint">{{data['lifestyle-considerations']}}</textarea>
+            <textarea class="govuk-textarea" id="additional-behaviours-and-lifestyle-considerations" name="additional-behaviours-and-lifestyle-considerations" rows="8" aria-describedby="additional-behaviours-and-lifestyle-considerations-hint">{{data['additional-behaviours-and-lifestyle-considerations']}}</textarea>
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-button-group">
