WIP risk registers and ORGS SCORE
Cannot finish this work on risk and OGRS as we
need answers from subject matter experts. Patrick
shared some good ideas in the Teams and Slack
channels about how we could use work from Allocate
a person on probation.

Will need to rebase part 2 and then pick this
branch up again.

--- a/app/views/16/pre-sentence-report/culpability-and-risk.html
+++ b/app/views/16/pre-sentence-report/culpability-and-risk.html
@@ -268,43 +268,78 @@
             </thead>
             <tbody class="govuk-table__body">
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><abbr title="OGRS3 Probability of proven re-offending">
-                  OGRS3</abbr></th>
+                <th scope="row" class="govuk-table__header">Risk to known
+                  individuals, TODO WHAT OGRS SCORE IS THIS?</th>
+                <td class="govuk-table__cell">SCORE</td>
+                <td class="govuk-table__cell">SCORE</td>
+                <td class="govuk-table__cell">SCORE</td>
+              </tr>
+              <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header">Risk of harm to
+                  children, TODO WHAT OGRS SCORE IS THIS?</th>
+                <td class="govuk-table__cell">SCORE</td>
+                <td class="govuk-table__cell">SCORE</td>
+                <td class="govuk-table__cell">SCORE</td>
+              </tr>
+              <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header">Risk of harm to
+                  public, TODO WHAT OGRS SCORE IS THIS?</th>
+                <td class="govuk-table__cell">SCORE</td>
+                <td class="govuk-table__cell">SCORE</td>
+                <td class="govuk-table__cell">SCORE</td>
+              </tr>
+              <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header">OGRS3 Probability of
+                  proven re-offending</th>
                 <td class="govuk-table__cell">22</td>
                 <td class="govuk-table__cell">36</td>
                 <td class="govuk-table__cell">Low</td>
               </tr>
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><abbr title="OGP probability of proven non-violent re-offending">
-                  OGP</abbr></th>
+                <th scope="row" class="govuk-table__header">Risk of serious harm,
+                  TODO WHAT OGRS SCORE IS THIS?</th>
+                <td class="govuk-table__cell">SCORE</td>
+                <td class="govuk-table__cell">SCORE</td>
+                <td class="govuk-table__cell">SCORE</td>
+              </tr>
+              <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header">Risk of self harm,
+                  TODO WHAT OGRS SCORE IS THIS?</th>
+                <td class="govuk-table__cell">SCORE</td>
+                <td class="govuk-table__cell">SCORE</td>
+                <td class="govuk-table__cell">SCORE</td>
+              </tr>
+              <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header">OGP probability of
+                  proven non-violent re-offending</th>
                 <td class="govuk-table__cell">22</td>
                 <td class="govuk-table__cell">34</td>
                 <td class="govuk-table__cell">Medium</td>
               </tr>
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><abbr title="OVP probability of proven violent type re-offending">
-                  OVP</abbr></th>
+                <th scope="row" class="govuk-table__header">OVP probability of
+                  proven violent type re-offending</th>
                 <td class="govuk-table__cell">12</td>
                 <td class="govuk-table__cell">21</td>
                 <td class="govuk-table__cell">Low</td>
               </tr>
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><abbr title="OSP indecent image offending risk">
-                  OSP</abbr></th>
+                <th scope="row" class="govuk-table__header">OSP indecent image
+                  offending risk</th>
                 <td class="govuk-table__cell">N/A</td>
                 <td class="govuk-table__cell">N/A</td>
                 <td class="govuk-table__cell">N/A</td>
               </tr>
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><abbr title="OSP contact sexual re-offending risk">
-                  OSP</abbr></th>
+                <th scope="row" class="govuk-table__header">OSP contact sexual
+                  re-offending risk</th>
                 <td class="govuk-table__cell">N/A</td>
                 <td class="govuk-table__cell">N/A</td>
                 <td class="govuk-table__cell">N/A</td>
               </tr>
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><abbr title="RSR risk of serious recidivism">
-                  RSR</abbr></th>
+                <th scope="row" class="govuk-table__header">RSR risk of serious
+                  recidivism</th>
                 <td class="govuk-table__cell">N/A</td>
                 <td class="govuk-table__cell">1.18</td>
                 <td class="govuk-table__cell">Low (dynamic)</td>
