Track work on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,8 +16,10 @@
       Pre-sentence report prototype</a></p>
     <ul class="govuk-list govuk-list--bullet">
       <li>
-        <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3890">
-          SME Review</a>
+        <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3854">
+          SME Review part 1</a><br />
+        <a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3907">
+            SME Review part 2</a>
           <br />
           We had some changes but the SME(s) were not being honest so this work
           has a substantial amount of changes to the questions/ how we ask them/
@@ -25,7 +27,9 @@
           <br />
           SME(s) expected a digital version of their design sprint artifact so
           we will make those changes for our delayed first round of testing.
+          </p>
       </li>
+    </ul>
     <h2 class="govuk-heading-m">v15</h2>
     <p><a class="govuk-link" href="/15/verification-report/index.html">
       Verification report prototype</a> |
