Amend offences title

--- a/app/views/16/pre-sentence-report/offences.html
+++ b/app/views/16/pre-sentence-report/offences.html
@@ -67,7 +67,7 @@
             <div class="govuk-grid-column-two-thirds">
               <div class="govuk-form-group">
                 <h2 class="govuk-heading-l" for="summary-of-offences">
-                  Summary of offences
+                  Summary of offences before the court
                 </h2>
                 <div id="summary-of-offences-hint" class="govuk-hint">
                   Review current and pervious offences to identify any patterns of
