Offences guideance mentions cases before the court

--- a/app/views/16/pre-sentence-report/offences.html
+++ b/app/views/16/pre-sentence-report/offences.html
@@ -72,7 +72,9 @@
                 <div id="summary-of-offences-hint" class="govuk-hint">
                   Review current and pervious offences to identify any patterns of
                   offending. This could include repeated similar or escalating
-                  offences.
+                  offences.<br/><br/>
+                  Discuss the offences relevant to this pre-sentence report
+                  that should be discussed before the court.
                 </div>
                 <textarea class="govuk-textarea" id="summary-of-offences" name="summary-of-offences" rows="18" aria-describedby="summary-of-offences-hint">{{data['summary-of-offences']}}</textarea>
               </div>
