Offences page add link to sentencing guidelines
Link to search page for guidelines so that
report writers can find the guidelines to write
better offence summaries for the judiciary

--- a/app/views/16/pre-sentence-report/offences.html
+++ b/app/views/16/pre-sentence-report/offences.html
@@ -74,7 +74,9 @@
                   offending. This could include repeated similar or escalating
                   offences.<br/><br/>
                   Discuss the offences relevant to this pre-sentence report
-                  that should be discussed before the court.
+                  that should be discussed before the court.<br/><br/>
+                  You may want to <a href="https://www.sentencingcouncil.org.uk/search " class="govuk-link" rel="noreferrer noopener" target="_blank">
+                    review the sentencing guidelines. (opens in new tab)</a>
                 </div>
                 <textarea class="govuk-textarea" id="summary-of-offences" name="summary-of-offences" rows="18" aria-describedby="summary-of-offences-hint">{{data['summary-of-offences']}}</textarea>
               </div>
