Include guidance on themes that should be considered when thinking about pattern of offending.

--- a/app/views/16/pre-sentence-report/pattern-of-offending-and-response-to-supervision.html
+++ b/app/views/16/pre-sentence-report/pattern-of-offending-and-response-to-supervision.html
@@ -71,6 +71,9 @@
                   Review current and pervious offences to identify any patterns of
                   offending. This could include repeated similar or escalating
                   offences.<br/><br/>
+                  You should consider themes like: proximity of offences, time
+                  between release and offence, crimes on bail, crimes on orders,
+                  crimes on license.<br/><br/>
                   Look for patterns that may indicate supervisions, interventions
                   or accredited programs that may have reduced re-offending.<br/><br/>
                   It can be helpful for the judiciary to talk about one offence,
