Add a sensitive tag to the Partner's address
There is a need to mark addresses as sensitive so
that they are not shared with the defendant but
are considered as part of the pre-sentence report.

--- a/app/views/16/pre-sentence-report/defendant-details.html
+++ b/app/views/16/pre-sentence-report/defendant-details.html
@@ -131,6 +131,8 @@
                             <div class="govuk-grid-row govuk-!-margin-bottom-3">
                               <div class="govuk-grid-column-two-thirds">
                                 <h3 class="govuk-heading-s">{{data['other-address-description']}}</h3>
+                                <strong class="govuk-tag govuk-tag--yellow">
+                                  Sensitive</strong>
                               </div>
                               <div class="govuk-grid-column-one-third moj-ticket-panel__links">
                                 <a href="addresses/add-address.html?addEditAddress=Edit" class="govuk-link" style="font-weight: normal;">
