Additonal addresses - record in NDelius
Added content to tell users to include changes to/
new addresses in NDelius. This is counter to how
we expect people to deal with the name, DOB and
current address in that we expect to be checked
and correct before the PSR is started.

--- a/app/views/16/pre-sentence-report/defendant-details.html
+++ b/app/views/16/pre-sentence-report/defendant-details.html
@@ -122,7 +122,9 @@
                   <div id="changedName-hint" class="govuk-hint">
                     Record any other addresses that the defendant spends a
                     significant amount of time at. These will be used as part of any
-                    domestic abuse and safeguarding checks.
+                    domestic abuse and safeguarding checks.<br/><br/>
+                    Record any changes to existing addresses or new address
+                    here and in NDelius.
                   </div>
                   {% if (data['other-address-description']) %}
                     <div class="moj-ticket-panel-container">
