Add behavioural and lifestyle guidance
Add bullet list of things to consider, this may
want to be details component or something similar
in the future.

--- a/app/views/16/pre-sentence-report/additional-behaviours-and-lifestyle-considerations.html
+++ b/app/views/16/pre-sentence-report/additional-behaviours-and-lifestyle-considerations.html
@@ -69,6 +69,18 @@
               Describe any additional behaviours and lifestyle considerations
               that could have in impact on the proposed sentence.
             </div>
+            <p class="govuk-body">You may want to consider:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li>accommodation</li>
+              <li>finances</li>
+              <li>lifestyle</li>
+              <li>associates</li>
+              <li>alcohol and drug use</li>
+              <li>mental health</li>
+              <li>thinking and behavioural issues</li>
+              <li>attitudes</li>
+              <li>general health</li>
+            </ul>
             <textarea class="govuk-textarea" id="additional-behaviours-and-lifestyle-considerations" name="additional-behaviours-and-lifestyle-considerations" rows="8" aria-describedby="additional-behaviours-and-lifestyle-considerations-hint">{{data['additional-behaviours-and-lifestyle-considerations']}}</textarea>
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
