Improve defendant details addresses
- fix delete address returning to the wrong page
- improve guidance on defendant details to explain
  steps to update as an <ol>
- improve guidance on other addresses for clarity

--- a/app/views/16/pre-sentence-report/addresses/delete-address.html
+++ b/app/views/16/pre-sentence-report/addresses/delete-address.html
@@ -36,7 +36,7 @@
             <button type="submit" class="govuk-button govuk-button--warning" data-module="govuk-button">
               Delete address
             </button>
-            <a href="../essential-information" class="govuk-link" style="font-weight: normal;">Cancel</a>
+            <a href="../defendant-details" class="govuk-link" style="font-weight: normal;">Cancel</a>
           </div>
         </form>
       </main>
