--- a/app/views/16/pre-sentence-report/victim-impact-assessment.html
+++ b/app/views/16/pre-sentence-report/victim-impact-assessment.html
@@ -13,8 +13,8 @@
                 Defendant details</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offences">
-                Offences</a>
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="summary-of-offences-under-consideration">
+                Summary of offences under consideration</a>
             </li>
             <li class="app-subnav__section-item app-subnav__section-item--current">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="victim-impact-assessment">
